 	- remove systemd-ask-password-wall path and service;
 * systemctl:
 	- show StatusErrno value in "systemctl status";
 	- remove property argument option;
 	- don't open the password agent;
 	- remove no-ask-password argument option;
 	- remove help command;
 	- use list-unit-files to get "all" units in bash-completion;
 	- prevent mangling unit names in bash-completion;
 * shared:
 	- consider 0x7F(DEL) a control chracter;
 	- don't consider tabs special in string_has_cc() anymore;
 	- add string table entries for mips-le archs which were missing;
 	- remove unused functions;
 	- use strjoin in execute_directory function;
 	- remove ring util;
 	- add function to open temp files in selinux mode;
 	- don't make ~/.local/share/systemd/user a symlink;
 	- quote more shell characters in envfiles;
 	- fix error message in socket label util;
 	- rename id _UNIT_FILE_PRESET_MODE_MAX to _UNIT_FILE_PRESET_MAX;
 	- remove eventfd util;
 	- remove ask-password-api util;
 	- add quotes to warning message in log module;
 	- make SYSTEMD_UNIT_PATH more flexible;
 	- add clock_boottime_or_monotonic in time util;
 	- add utility function to append root to path;
 	- require exact matches in parse_boolean function;
 	- add and use USEC/NSEC_INFINIY;
 	- add safe_atou8 function;
 * virt:
 	- rework container detection logic;
 	- detect s390 virtualization;
 * tmpfiles:
 	- remove unused /run/systemd/ask-password directory;
 * po:
 	- add Ukrainian translation;
 * man:
 	- add link to Open Group Base Specifications;
 	- add missing archs to ConditionArchitecture= description;
 	- chroot jails are no longer detected by ConditionVirtualization=;
 	- remove machine-info page;
 	- mention XDG_DATA_HOME in systemd.unit;
 	- document yearly and annually in systemd.time(7);
 	- update systemd-analyze page;
 	- remove repeating words;
 	- fix path for system-sleep hook directory;
 * tests:
 	- remove test-ring test;
 	- add tests to test-tables;
 	- fix access to unit load path;